--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<style type="text/css">
 		@font-face {
 			font-family: digit;
-			src: url('http://lizhuosdata.oss-cn-beijing.aliyuncs.com/%E9%A1%B5%E9%9D%A2%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/Digital-7-Mono.ttf') format("truetype");
+			src: url('https://lizhuosdata.oss-cn-beijing.aliyuncs.com/%E9%A1%B5%E9%9D%A2%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/Digital-7-Mono.ttf') format("truetype");
 		}
 
 		body {
@@ -131,7 +131,7 @@
 		}
 	</style>
 
-	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+	<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 
 </head>
 
