--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		body {
 			margin: 0;
 			padding: 0;
-			background: #ffe;
+			background: rgba(210, 64, 172, 0.46);
 			font-size: 12px;
 			overflow: auto
 		}
@@ -25,6 +25,13 @@
 		#mainDiv {
 			width: 100%;
 			height: 100%
+		}
+
+		#content {
+			/* width: 100%; */
+			height: 625px;
+			margin-top: 59px;
+			margin-left: 200px;
 		}
 
 		#loveHeart {
@@ -49,7 +56,7 @@
 			font-family: "sans-serif";
 			width: 500px;
 			font-size: 24px;
-			color: #666
+			color: #fff
 		}
 
 		#messages {
@@ -73,7 +80,7 @@
 		#loveu .signature {
 			margin-top: 10px;
 			font-size: 20px;
-			font-style: italic
+			/* font-style: italic */
 		}
 
 		#clickSound {
@@ -155,55 +162,59 @@
 <body>
 
 	<div id="mainDiv">
+		<audio controls loop id="heheplay">
+			<source src="./imissyou.mp3" type="audio/mpeg">
+		您的浏览器不支持 audio 元素。
+		</audio>
 		<div class="swiper-container">
 				<div class="swiper-wrapper">
-						<div class="swiper-slide" style="background-image: url('./p1.jpg');"></div>
-						<div class="swiper-slide" style="background-image: url('./p2.jpg');"></div>
-						<div class="swiper-slide" style="background-image: url('./p3.jpg');"></div>
-						<div class="swiper-slide" style="background-image: url('./p4.jpg');"></div>
-						<div class="swiper-slide" style="background-image: url('./p5.jpg');"></div>
+						<div class="swiper-slide" style="background-image: url('https://lizhuosdata.oss-cn-beijing.aliyuncs.com/%E9%A1%B5%E9%9D%A2%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/p1.jpg?x-oss-process=style/yibaobao');"></div>
+						<div class="swiper-slide" style="background-image: url('https://lizhuosdata.oss-cn-beijing.aliyuncs.com/%E9%A1%B5%E9%9D%A2%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/p2.jpg?x-oss-process=style/yibaobao');"></div>
+						<div class="swiper-slide" style="background-image: url('https://lizhuosdata.oss-cn-beijing.aliyuncs.com/%E9%A1%B5%E9%9D%A2%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/p3.jpg?x-oss-process=style/yibaobao');"></div>
+						<div class="swiper-slide" style="background-image: url('https://lizhuosdata.oss-cn-beijing.aliyuncs.com/%E9%A1%B5%E9%9D%A2%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/p4.jpg?x-oss-process=style/yibaobao');"></div>
+						<div class="swiper-slide" style="background-image: url('https://lizhuosdata.oss-cn-beijing.aliyuncs.com/%E9%A1%B5%E9%9D%A2%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/p5.jpg?x-oss-process=style/yibaobao');"></div>
 				</div>
 		</div>
-		<div id="content" style="width: 1110px; height: 625px; margin-top: 99px; margin-left: 310px;">
+		<div id="content">
 			<div id="code" style="margin-top: 112.5px;">
 				<span class="comments">/**</span><br>
 				<span class="space"><span class="comments">*2020—10-08,</span><br>
 					<span class="space"><span class="comments">*2021-05-23.</span><br>
 						<span class="space"><span class="comments">*/</span><br>
-							Boy name = <span class="keyword">杨</span> 憨憨<br>
-							Girl name = <span class="keyword">易</span> 宝宝<br>
-							<span class="comments">// Fall in love river. </span><br>
-							The boy love the girl;<br>
-							<span class="comments">// They love each other.</span><br>
-							The girl loved the boy;<br>
-							<span class="comments">// AS time goes on.</span><br>
-							The boy can not be separated the girl;<br>
-							<span class="comments">// At the same time.</span><br>
-							The girl can not be separated the boy;<br>
-							<span class="comments">// Both wind and snow all over the sky.</span><br>
-							<span class="comments">// Whether on foot or 5 kilometers.</span><br>
-							<span class="keyword">The boy</span> very <span class="keyword">happy</span>;<br>
-							<span class="keyword">The girl</span> is also very <span class="keyword">happy</span>;<br>
-							<span class="placeholder"><span class="comments">// Whether it is right now</span><br>
-								<span class="placeholder"><span class="comments">// Still in the distant future.</span><br>
-									<span class="placeholder">The boy has but one dream;<br>
-										<span class="comments">// The boy wants the girl could well have been happy.</span><br>
+							Boy = <span class="keyword">杨</span> 憨憨<br>
+							Girl = <span class="keyword">易</span> 宝宝<br>
+							<span class="comments">// 宝宝生日快乐鸭 </span><br>
+							感谢上天让我遇到我的宝宝;<br>
+							<span class="comments">// 工作辛苦了.</span><br>
+							以后我一定要好好疼宝宝;<br>
+							<span class="comments">// 让你受委屈了.</span><br>
+							不惹宝宝生气;<br>
+							<span class="comments">// 每天都好想你.</span><br>
+							想给宝宝做好吃的;<br>
+							<span class="comments">// 想带你去川西.</span><br>
+							<span class="comments">// 想跟你去看星星看月亮.</span><br>
+							<span class="keyword">小杨</span> 亲亲 <span class="keyword">宝宝</span>;<br>
+							<span class="keyword">宝宝</span> 抱抱 <span class="keyword">小杨</span>;<br>
+							<span class="placeholder"><span class="comments">// 宝宝累了给宝宝捏捏</span><br>
+								<span class="placeholder"><span class="comments">// 给宝宝拍美美哒照片.</span><br>
+									<span class="placeholder">为宝宝做一个最棒的小杨;<br>
+										<span class="comments">// 直到永远.</span><br>
 										<br>
 										<br>
-										I want to say:<br>
-										Baby, I love you forever;<br>
+										宝宝:<br>
+										爱你，生日快乐;<br>
 									</span></span></span></span></span></span></div>
 			<div id="loveHeart">
 				<canvas id="garden" width="670" height="625"></canvas>
-				<div id="words" style="position: absolute; top: 294px; left: 820px;">
+				<div id="words" style="position: absolute; top: 308px; left: 710px;">
 					<div id="messages" style="display: block;">
-						亲爱的，这是我们相爱在一起的时光。
+						宝宝，我们在一起这么多天啦
 						<div id="elapseClock"><span class="digit">1928</span> days <span class="digit">22</span> hours <span
 								class="digit">20</span> minutes <span class="digit">47</span> seconds</div>
 					</div>
 					<div id="loveu" style="display: block;">
-						爱你直到永永远远。<br>
-						<div class="signature">- 爱你的人</div>
+						在一起每一天都要开心幸福呀<br>
+						<div class="signature">生日快乐</div>
 					</div>
 				</div>
 			</div>
@@ -213,7 +224,7 @@
 	<script>        
 		var mySwiper = new Swiper ('.swiper-container', {
 			autoplay: true,
-			delay:4000,
+			delay:5000,
 			// effect: 'fade',
 			effect: 'coverflow',
       grabCursor: true,
@@ -227,7 +238,11 @@
         slideShadows: true,
       },
 			loop: true, // 循环模式选项
-		})        
+		})  
+		var mp3 = document.getElementById('heheplay')
+		setTimeout(() => {
+			mp3.play()
+		}, 3000);      
 	</script>
 
 	<script type="text/javascript">
@@ -249,10 +264,10 @@
 			gardenCtx.globalCompositeOperation = "lighter";
 			garden = new Garden(gardenCtx, gardenCanvas);
 
-			$("#content").css("width", $loveHeart.width() + $("#code").width());
-			$("#content").css("height", Math.max($loveHeart.height(), $("#code").height()));
-			$("#content").css("margin-top", Math.max(($window.height() - $("#content").height()) / 2, 10));
-			$("#content").css("margin-left", Math.max(($window.width() - $("#content").width()) / 2, 10));
+			// $("#content").css("width", $loveHeart.width() + $("#code").width());
+			// $("#content").css("height", Math.max($loveHeart.height(), $("#code").height()));
+			// $("#content").css("margin-top", Math.max(($window.height() - $("#content").height()) / 2, 10));
+			// $("#content").css("margin-left", Math.max(($window.width() - $("#content").width()) / 2, 10));
 
 			// renderLoop
 			setInterval(function () {
