--- a/index.html
+++ b/index.html
@@ -201,18 +201,20 @@
 							不惹宝宝生气;<br>
 							<span class="comments">// 每天都好想你.</span><br>
 							想给宝宝做好吃的;<br>
-							<span class="comments">// 想带你去.</span><br>
-							<span class="comments">// 想跟你去看星星看月亮.</span><br>
-							<span class="keyword">小杨</span> 亲亲 <span class="keyword">宝宝</span>;<br>
+							<span class="comments">// 想带你去天涯海角.</span><br>
+							<span class="comments">// 想跟你去看日月星辰.</span><br>
+							<!-- <span class="keyword">小杨</span> 亲亲 <span class="keyword">宝宝</span>;<br> -->
 							<!-- <span class="keyword">宝宝</span> 抱抱 <span class="keyword">小杨</span>;<br> -->
+							<span class="placeholder"><span class="comments">// 给宝宝拍美美的照片.</span><br>
 							<span class="placeholder"><span class="comments">// 宝宝累了给宝宝捏捏</span><br>
-								<span class="placeholder"><span class="comments">// 给宝宝拍美美哒照片.</span><br>
-									<span class="placeholder">为宝宝做一个最棒的小杨，;<br>
+								<span class="placeholder"><span class="comments">// 做宝宝坚强的后盾.</span><br>
+								<span class="placeholder"><span class="comments">// 感谢上天让我们有个爱的结晶，这是一生中最棒的礼物.</span><br>
+									<span class="placeholder">为宝宝做一个的坚强勇敢的丈夫，为小小杨做一个充满爱的爸爸;<br>
 										<span class="comments">// 直到永远.</span><br>
 										<br>
 										<br>
-										宝宝:<br>
-										;<br>
+										宝宝<br>
+										嫁给我;<br>
 									</span></span></span></span></span></span></div>
 			<div id="loveHeart">
 				<canvas id="garden" width="670" height="625"></canvas>
@@ -223,7 +225,7 @@
 								class="digit">20</span> minutes <span class="digit">47</span> seconds</div>
 					</div>
 					<div id="loveu" style="display: block;">
-						希望可以在后面多加两个0<br>
+						希望可以在永永远远在一起<br>
 						<div class="signature">Marry Me Please</div>
 					</div>
 				</div>
